...
          style={{
            color: COLORS.white,
            fontSize: 20,
            fontWeight: "800",
          }}
        >
          Chat MIDAS
        </Text>
        <Text style={{ color: COLORS.gray, fontSize: 13 }}>
          Information et education financiere uniquement
        </Text>
      </View>

...
